--- a/Code/test.ipynb
+++ b/Code/test.ipynb
@@ -316,6 +316,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 1), dtype=int32, numpy=\n",
+       "array([[3],\n",
+       "       [3]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "x = tf.constant([[1, 1, 1], [1, 1, 1]])\n",
+    "tf.math.reduce_sum(x, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
